Website/css/styles.css
/* ... */
/* HEADER */
.chatbox__header {
  background: var(--primaryGradient);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding: 15px 20px;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  box-shadow: var(--primaryBoxShadow);
}

.chatbox__image--header {
  margin-right: 10px;
}

.chatbox__heading--header {
  font-size: 1.2rem;
  color: white;
}

.chatbox__description--header {
  font-size: .9rem;
  color: white;
}

/* Messages */
.chatbox__messages {
  padding: 0 20px;
}

.messages__item {
  margin-top: 10px;
  background: #E0E0E0;
  padding: 8px 12px;
  max-width: 80%;
  color: rgb(84, 84, 84);
  font-size: 0.75rem;
}

.messages__item--visitor,
.messages__item--typing {
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
}

.messages__item--operator {
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  border-bottom-left-radius: 20px;
  background: var(--primary);
  color: white;
}

/* FOOTER */
.chatbox__footer {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 20px 20px;
  background: var(--primaryGradient);
  box-shadow: var(--primaryBoxShadow);
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  margin-top: 20px;
}

.chatbox__footer input {
  width: 80%;
  border: none;
  padding: 10px 10px;
  border-radius: 30px;
  text-align: left;
}

.chatbox__send--footer {
  color: white;
}

.chatbox__button button,
.chatbox__button button:focus,
.chatbox__button button:visited {
  padding: 10px;
  background: var(--first-color);
  border: none;
  outline: none;
  border-top-left-radius: 50px;
  border-top-right-radius: 50px;
  border-bottom-left-radius: 50px;
  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
  cursor: pointer;
  height: 40px; 
  width: 40px;
  color: var(--first-color-lighten);
}

.chatbox__button button:hover{
  background-color: var(--first-color-dark);
}

.chatbox__close {
  color: var(--first-color-lighten);
  float: right;
  cursor: pointer;
}

*, html {
  --primaryGradient: linear-gradient(93.12deg, var(--first-color), var(--first-color-dark));
  --secondaryGradient: linear-gradient(268.91deg, var(--first-color), var(--first-color-dark));
  --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
  --secondaryBoxShadow: 0px -10px 15px rgba(0, 0, 0, 0.1);
  --primary: var(--first-color);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* =======  Typewriter Font ===== */

/* DEMO-SPECIFIC STYLES */
.typewriter h1 {
  color: var(--text-color);
  font-size: var(--h1-font-size);
  font-family: var(--body-font);
  font-weight: 550;
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: .15em solid var(--first-color); /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  letter-spacing: .025em; /* Adjust as needed */
  animation: 
    typing 2s steps(20, end),
    blink-caret .8s step-end infinite;
}

/* The typing effect */
@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: var(--first-color) }
}

/* =======  Changing Theme ===== */
.change-theme{
  font-size: 1.25rem;
  color: var(--first-color-lighten);
  margin-right: var(--mb-1);
  cursor: pointer;
  display: inline-flex;
  background-color: var(--first-color);
  border-radius: 50%;
  padding: .40rem;
  margin: 0 var(--mb-1);
  transition: .3s;
}
.change-theme:hover{
  background-color: var(--first-color-dark);
}

body.dark-theme{
  --first-color: #8800ff;
  --first-color-dark: #9400c6; 
  --first-color-darken: #8400b0; 
  --text-color: #f4f4f4; 
  --first-color-light: #EAE7E6; 
  --first-color-lighten: #FFFAFA;
  --background-color: #302f2f;
  background-color: var(--background-color);
  --first-transparent-color:rgba(151, 44, 204, 0.7);
  --boxshadow:  0px 0px 15px rgba(255, 255, 255, 0.5);
  --nav-color: #54423d;
}

/* ===== CV BUTTON =====*/
.cv__button {
  --offset: 10px;
  --border-size: 2px;
  display: block;
  position: relative;
  padding: 1.5em 3em;
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
  border: 0;
  background: transparent;
  color: var(--first-color);
  text-transform: uppercase;
  letter-spacing: 0.25em;
  outline: none;
  cursor: pointer;
  font-weight: bold;
  border-radius: 0;
  box-shadow: inset 0 0 0 var(--border-size) currentcolor;
  transition: background 0.8s ease;
  margin-bottom: 5cm;
  background-color: var(--background-color);
}
.cv__button:hover {
  background: rgba(100, 0, 0, 0.03);
  color: var(--first-color-dark);
}
.button__horizontal, .button__vertical {
  position: absolute;
  top: var(--horizontal-offset, 0);
  right: var(--vertical-offset, 0);
  bottom: var(--horizontal-offset, 0);
  left: var(--vertical-offset, 0);
  transition: transform 0.8s ease;
  will-change: transform;
}
.button__horizontal::before, .button__vertical::before {
  content: "";
  position: absolute;
  border: inherit;
}
.button__horizontal {
  --vertical-offset: calc(var(--offset) * -1);
  border-top: var(--border-size) solid currentcolor;
  border-bottom: var(--border-size) solid currentcolor;
}
.button__horizontal::before {
  top: calc(var(--vertical-offset) - var(--border-size));
  bottom: calc(var(--vertical-offset) - var(--border-size));
  left: calc(var(--vertical-offset) * -1);
  right: calc(var(--vertical-offset) * -1);
}
.cv__button:hover .button__horizontal {
  transform: scaleX(0);
}
.button__vertical {
  --horizontal-offset: calc(var(--offset) * -1);
  border-left: var(--border-size) solid currentcolor;
  border-right: var(--border-size) solid currentcolor;
}
/* ... */

